# pansi

./: README.md  setup.cfg  setup.py
demo/: dragon.py  drawtext.py  eventlogger.py  eventviewer.py  hexviewer.py  termevents.py  tetrello.py
docs/: requirements.txt
docs/src/: codes.rst  color.rst  conf.py  image.rst  index.rst  layout.rst  text.rst
docs/src/_static/: vanilla.css
pansi/: __init__.py  _codes.py  _keyboard.py  _kitty.py  _math.py  _measurement.py  _sgr.py  _term.py  _text.py  codes.py  color.py  image.py  screen.py  terminal.py  text.py  window.py
test/: test_measurement.py  test_terminal_output.py
