[metadata]
name = pansi
version = attr: pansi.__version__
url = https://github.com/technige/pansi
project_urls =
    Bug Tracker = https://github.com/technige/pansi/issues
    Source Code = source_url
author = Nigel Small
author_email = technige@nige.tech
description = Text mode rendering library
long_description = file: README.md
long_description_content_type = text/markdown
keywords = ANSI, terminal, text, graphics, unicode
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Console :: Curses
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: System :: Console Fonts
    Topic :: System :: Shells
    Topic :: Terminals
    Topic :: Terminals :: Terminal Emulators/X Terminals
    Topic :: Text Processing
    Topic :: Text Processing :: Markup
    Topic :: Utilities

[options]
packages = pansi
python_requires = >=3.6
install_requires =
    pillow

[options.entry_points]
console_scripts =
    pansi-image = pansi.image:main

[bdist_wheel]
universal = 1
